--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
       This is a placeholder for base href that will be replaced by the value of
       the `--base-href` argument provided to `flutter build`.
     -->
-      <base href="$FLUTTER_BASE_HREF">
+          <base href="$FLUTTER_BASE_HREF">
 <!--    <base href="./">-->
     -->
 
@@ -57,5 +57,6 @@
       });
     });
 </script>
+<script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
