--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
 
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>doctor_app</title>
     <link rel="manifest" href="./manifest.json">
 
